--- a/dev/block-explorer/index.html
+++ b/dev/block-explorer/index.html
@@ -2,18 +2,18 @@
 <html>
 
 <head>
-	<title>Block Explorer</title>
+	<title>Canuwai Blockchain</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 
 <body ng-app="BlockExplorer">
 	<div class="container" ng-controller="MainController">
 		<div class="row">
 			<div class="col-md-8 offset-md-2">
-				<h1 id="page-title">Block Explorer</h1>
+				<h1 id="page-title">Canuwai Blockchain</h1>
 			</div>
 		</div>
 		<div class="row">
